provarAnt/00D190000000ZY2EAM/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>APFD_Date__c</fullName>
        <inlineHelpText>Field depend on Approved for Future Delivery</inlineHelpText>
        <label>APFD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advertised_Make_GM__c</fullName>
        <label>Advertised Make GM</label>
        <picklist>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advertised_Make__c</fullName>
        <label>Advertised Make</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeLorean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_for_Future_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Future Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Artwork_Dropdown__c</fullName>
        <label>Artwork - Dropdown</label>
        <picklist>
            <picklistValues>
                <fullName>Alpha Sent EQS/DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Use Alpha Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Use Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Co-Op Pre-Approval Case</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Artwork_PreApprove_Case__c</fullName>
        <label>Artwork - PreApprove Case #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAC_Code__c</fullName>
        <label>BAC Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMWs_Dealer_Center_ID__c</fullName>
        <label>BMW&apos;s Dealer Center ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMWs_Location_ID__c</fullName>
        <label>BMW&apos;s Location ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Fill this out only if it is applicable</inlineHelpText>
        <label>Third Party Bill to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blank_Field_1__c</fullName>
        <label>Blank Field_1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank_Field_2__c</fullName>
        <label>Blank Field_2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Record_KBB_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Showcase Call Tracking Call Record</inlineHelpText>
        <label>KBB Showcase Call Tracking Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Record_Used_KBB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Call Tracking Used Call Record</inlineHelpText>
        <label>KBB Call Tracking Used Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Record_new__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking New Call Record</inlineHelpText>
        <label>Call Tracking New Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Record_new_kbb__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Call Tracking New Call Record</inlineHelpText>
        <label>KBB Call Tracking New Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Record_used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking Used Call Record</inlineHelpText>
        <label>Call Tracking Used Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Autotrader_Listing_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Autotrader Listing Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Type_Restrictions__c</fullName>
        <label>Car Type Restrictions</label>
        <picklist>
            <picklistValues>
                <fullName>Alpha Restrict CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Restrict New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Restrict CPO &amp; New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cars_com_ID__c</fullName>
        <label>Cars.com ID#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_thru_Skyscrapers_URL__c</fullName>
        <inlineHelpText>Skyscrapers Click-thru URL</inlineHelpText>
        <label>Skyscrapers Click-thru URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Click_thru_URL_New__c</fullName>
        <inlineHelpText>Leaderboard New Click-thru URL</inlineHelpText>
        <label>Leaderboard New Click-thru URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Click_thru_URL_Used__c</fullName>
        <inlineHelpText>Leaderboard Used Click-thru URL</inlineHelpText>
        <label>Leaderboard Used Click-thru URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Co_Op_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Op Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Op_Pre_Approval_Case_New__c</fullName>
        <inlineHelpText>Leaderboard New Co-Op Pre-Approval Case #</inlineHelpText>
        <label>Leaderboard New Co-Op Pre-Approval Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Op_Pre_Approval_Case_Skyscrapers__c</fullName>
        <inlineHelpText>Skyscrapers Co-Op Pre-Approval Case #</inlineHelpText>
        <label>Skyscrapers Co-Op Pre-Approval Case #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Op_Pre_Approval_Case_Used__c</fullName>
        <inlineHelpText>Leaderboard Used Co-Op Pre-Approval Case #</inlineHelpText>
        <label>Leaderboard Used Co-Op Pre-Approval Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_op_Contact_Email__c</fullName>
        <label>Co-op Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Co_op_Level_of_Service__c</fullName>
        <label>Co-op Level of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader Managed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_op_Package_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-op_Package Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cobalt_URL__c</fullName>
        <inlineHelpText>KBB Showcase Cobalt URL</inlineHelpText>
        <label>Cobalt URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used by sales agents to indicate that this particular package (order line) has been fully configured</description>
        <inlineHelpText>To be used by sales agents to indicate that this particular package (order line) has been fully configured</inlineHelpText>
        <label>Form Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_URL_Type__c</fullName>
        <label>Custom URL Type</label>
        <picklist>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <label>DBA Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <picklist>
            <picklistValues>
                <fullName>ABILENE-SWEETWATER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADA-ARDMORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANY-SCHENECTADY-TROY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANY_GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBUQUERQUE-SANTA_FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALEXANDRIA_LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPENA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMARILLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCHORAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUGUSTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAKERSFIELD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALTIMORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATON_ROUGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEAUMONT-PORT_ARTHUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEND_OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BILLINGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BILOXI-GULFPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BINGHAMTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIRMINGHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLUEFIELD-BECKLEY-OAK_HILL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOISE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOWLING_GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUFFALO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BURLINGTON-PLATTSBURGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUTTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASPER-RIVERTON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <label>Dealer Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Specialties_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Specialties Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Website_URL__c</fullName>
        <inlineHelpText>LeadDriver Dealer Website URL</inlineHelpText>
        <label>Dealer Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_logo_submitted_to_Autotrader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer logo submitted to Autotrader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealership_Website__c</fullName>
        <label>Dealership Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deliver_1st_of_the_next_month__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliver 1st of the next month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enhanced_Call_Tracking_new__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking New Enhanced</inlineHelpText>
        <label>Call Tracking New Enhanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enhanced_Call_Tracking_used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking Used Enhanced</inlineHelpText>
        <label>Call Tracking Used Enhanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <label>Facebook ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Inventory__c</fullName>
        <label>Facebook Inventory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_com__c</fullName>
        <label>Facebook.com/</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filled_By_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holds whether or not this order item has been already filled in with data captured by pricing.</description>
        <label>Filled_By_Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Franchise</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Line_Pro_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Front-Line Pro Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Make__c</field>
                <operation>equals</operation>
                <valueField>Model__c.Make__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Rate_Amount__c</fullName>
        <label>Full Rate Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Rate_Below_Rate__c</fullName>
        <label>Full Rate / Below Rate</label>
        <picklist>
            <picklistValues>
                <fullName>Full Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_Front_Line_Pro_Model_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New 1 GM Front-Line Pro Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.GM_New_Car_Make_1__c</field>
                <operation>equals</operation>
                <valueField>Model__c.Make__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>Order Products (GM Front-Line Pro Model 1)</relationshipLabel>
        <relationshipName>Order_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_Front_Line_Pro_Model_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New 2 GM Front-Line Pro Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.GM_New_Car_Make_2__c</field>
                <operation>equals</operation>
                <valueField>Model__c.Make__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>Order Products (GM Front-Line Pro Model 2)</relationshipLabel>
        <relationshipName>Order_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_Front_Line_Pro_Model_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New 3 GM Front-Line Pro Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.GM_New_Car_Make_3__c</field>
                <operation>equals</operation>
                <valueField>Model__c.Make__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>Order Products (GM Front-Line Pro Model 3)</relationshipLabel>
        <relationshipName>Order_Products3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_NEW_CAR_SET_1__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM NEW CAR SET 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_NEW_CAR_SET_2__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM NEW CAR SET 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_NEW_CAR_SET_3__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM NEW CAR SET 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_New_Blank_1__c</fullName>
        <label>New 1 GM Blank</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GM_New_Blank_2__c</fullName>
        <label>New 2 GM Blank</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GM_New_Blank_3__c</fullName>
        <label>New 3 GM Blank</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_1__c</fullName>
        <label>New 1 GM Make</label>
        <picklist>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_2__c</fullName>
        <label>New 2 GM Make</label>
        <picklist>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_3__c</fullName>
        <label>New 3 GM Make</label>
        <picklist>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_Quantity_1__c</fullName>
        <label>New 1 GM Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_Quantity_2__c</fullName>
        <label>New 2 GM Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_Quantity_3__c</fullName>
        <label>New 3 GM Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Set_1_Blank__c</fullName>
        <label>GM New Car Set 1 Blank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Set_2_Blank__c</fullName>
        <label>GM New Car Set 2 Blank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Set_3_Blank__c</fullName>
        <label>GM New Car Set 3 Blank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_USED_CAR_SET_1__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM USED CAR SET 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_USED_CAR_SET_2__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM USED CAR SET 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_USED_CAR_SET_3__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM USED CAR SET 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_1__c</fullName>
        <label>Used 1 GM Make</label>
        <picklist>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_2__c</fullName>
        <label>Used 2 GM Make</label>
        <picklist>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_3__c</fullName>
        <label>Used 3 GM Make</label>
        <picklist>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_Quantity_1__c</fullName>
        <label>Used 1 GM Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_Quantity_2__c</fullName>
        <label>Used 2 GM Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_Quantity_3__c</fullName>
        <label>Used 3 GM Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Set_1_Blank__c</fullName>
        <label>GM Used Car Set 1 Blank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Set_2_Blank__c</fullName>
        <label>GM Used Car Set 2 Blank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Set_3_Blank__c</fullName>
        <label>GM Used Car Set 3 Blank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Dealer_Code__c</fullName>
        <label>Haystak Dealer Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Haystak_URL__c</fullName>
        <label>Haystak URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Inline_Display_New_Car_Ad_Artwork_GM__c</fullName>
        <label>Inline Display New Car Ad Artwork (GM )</label>
        <picklist>
            <picklistValues>
                <fullName>Sent EQS/DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use GM New Car Templates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inline_Display_New_Car_Ad_Artwork__c</fullName>
        <label>Inline Display New Car Ad Artwork</label>
        <picklist>
            <picklistValues>
                <fullName>Sent EQS/DMR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inline_Display_used_Car_Ad_Artwork_GM__c</fullName>
        <inlineHelpText>Inline Display Used Car Ad Artwork (GM)</inlineHelpText>
        <label>Inline Display Used Car Ad Artwork (GM)</label>
        <picklist>
            <picklistValues>
                <fullName>Use GM CPO Templates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inline_Display_used_Car_Ad_Artwork__c</fullName>
        <inlineHelpText>Inline Display Used Car Ad Artwork</inlineHelpText>
        <label>Inline Display Used Car Ad Artwork</label>
        <picklist>
            <picklistValues>
                <fullName>Sent EQS/DMR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leaderboard_New_Artwork_Gm_packages__c</fullName>
        <label>Leaderboard New Artwork (Gm packages)</label>
        <picklist>
            <picklistValues>
                <fullName>Use GM New Car Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use GM Used Car Templates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leaderboard_New_Artwork__c</fullName>
        <label>Leaderboard New Artwork</label>
        <picklist>
            <picklistValues>
                <fullName>Co-Op Pre-Approval Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make simple logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent EQS/DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Co-op Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Dealer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use GM New Car Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use GM Used Car Templates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>